fix resource patch不上的问题